# mumble.fish

./: .gitignore  README.md
.github/: SIGNING.md
.github/workflows/: build-app.yml
app/MumbleFish/: Info.plist  README.md  project.yml
app/MumbleFish/Sources/: APIClient.swift  AuthManager.swift  ContentView.swift  MumbleFishApp.swift  Note.swift  NotesStore.swift  SpeechRecognizer.swift
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
worker/: .dev.vars  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
worker/migrations/: 0001_initial.sql
worker/src/: auth.rs  lib.rs  models.rs  polish.rs
