[package]
name = "mumble-fish"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1", "http"] }
worker-macros = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"
urlencoding = "2"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
argon2 = { version = "0.5", features = ["rand"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
